--- a/Progress/Worktime.html
+++ b/Progress/Worktime.html
@@ -40,7 +40,6 @@
         transition: background-color 0.3s ease, transform 0.3s ease;
     }
 
-
     button:hover {
         background-color: #865dd8; 
         transform: translateY(-3px); 
@@ -62,25 +61,10 @@
 
     #buttonContainer {
         text-align: center;
+        display: none; /* Initially hide the button */
     }
 
-    #ticTacToeContainer {
-        background-color: #66268b; 
-        padding: 20px;
-        margin-top: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    }
-
-    #guessingGameContainer {
-        background-color: #66268b; 
-        padding: 20px;
-        margin-top: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    }
-
-    #cookieClickerContainer {
+    #ticTacToeContainer, #guessingGameContainer, #cookieClickerContainer {
         background-color: #66268b; 
         padding: 20px;
         margin-top: 20px;
@@ -102,68 +86,62 @@
         height: 100px; 
     }
 
-    body {
-    font-family: Arial, sans-serif;
-}
+    .container {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
 
-.container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
+    input[type="text"] {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 10px;
+    }
 
-input[type="text"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-}
+    button {
+        padding: 8px 16px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
 
-button {
-    padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-}
+    button:hover {
+        background-color: #0056b3;
+    }
 
-button:hover {
-    background-color: #0056b3;
-}
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    margin-bottom: 5px;
-}
-</style>
+    li {
+        margin-bottom: 5px;
+    }
+  </style>
 </head>
 <body>
-    <label for="timeInput">Set the time (in minutes):</label>
-    <input type="number" id="timeInput" min="1" step="1" value="5"> 
-    <button id="startButton">Start Timer</button>
-    <p>Your have been online for:</p>
-    <p id="display">00:00:00</p>
+  <label for="timeInput">Set the time (in minutes):</label>
+  <input type="number" id="timeInput" min="1" step="1" value="5"> 
+  <button id="startButton">Start Timer</button>
+  <p>You have been online for:</p>
+  <p id="display">00:00:00</p>
 
-
-    <div id="buttonContainer" style="display: none;">
-        <a href="Breaktime.html">
-            <button>Your work time is over! Click here to take your break and play some games!.</button>
-        </a>
-    </div>
-    <div class="container">
-        <h1>Task List</h1>
-        <input type="text" id="taskInput" placeholder="Add new task...">
-        <button id="addTaskBtn">Add Task</button>
-        <ul id="taskList"></ul>
-    </div>
+  <div id="buttonContainer">
+    <a href="Breaktime.html">
+      <button>Your work time is over! Click here to take your break and play some games!.</button>
+    </a>
+  </div>
+  <div class="container">
+    <h1>Task List</h1>
+    <input type="text" id="taskInput" placeholder="Add new task...">
+    <button id="addTaskBtn">Add Task</button>
+    <ul id="taskList"></ul>
+  </div>
 
   <script src="Worktime.js"></script>
 </body>
-
 </html>
