--- a/Progress/Worktime.html
+++ b/Progress/Worktime.html
@@ -1,147 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Worktime Popup</title>
-  <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #963bca;
-        margin: 0;
-        padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Worktime Popup</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #963bca;
+            margin: 0;
+            padding: 0;
+        }
 
-    h1 {
-        color: #ffffff; 
-        text-align: center;
-        margin-top: 20px;
-    }
+        h1 {
+            color: #ffffff; 
+            text-align: center;
+            margin-top: 20px;
+        }
 
-    p {
-        color: #ffffff; 
-        margin-bottom: 10px;
-    }
+        p {
+            color: #ffffff; 
+            margin-bottom: 10px;
+            text-align: center;
+        }
 
-    label {
-        display: block;
-        color: #ffffff; 
-        margin-bottom: 10px;
-    }
+        label {
+            display: block;
+            color: #ffffff; 
+            margin-bottom: 10px;
+            text-align: center;
+        }
 
-    button {
-        background-color: #512da8; 
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
-        margin-bottom: 10px;
-        border-radius: 5px;
-        transition: background-color 0.3s ease, transform 0.3s ease;
-    }
+        button {
+            background-color: #512da8; 
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            margin: 10px auto;
+            border-radius: 5px;
+            display: block;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            animation: slideIn 0.5s ease;
+        }
 
-    button:hover {
-        background-color: #865dd8; 
-        transform: translateY(-3px); 
-    }
+        button:hover {
+            background-color: #865dd8; 
+            transform: translateY(-3px); 
+        }
 
-    input[type="number"] {
-        padding: 8px;
-        font-size: 16px;
-        border: 1px solid #ffffff; 
-        border-radius: 5px;
-        background-color: transparent;
-        color: #ffffff; 
-    }
+        input[type="number"] {
+            padding: 8px;
+            font-size: 16px;
+            border: 1px solid #ffffff; 
+            border-radius: 5px;
+            background-color: transparent;
+            color: #ffffff; 
+            display: block;
+            margin: 0 auto;
+            max-width: 200px;
+        }
 
-    iframe {
-        border: 2px solid #ffffff; 
-        border-radius: 5px;
-    }
+        iframe {
+            border: 2px solid #ffffff; 
+            border-radius: 5px;
+            display: block;
+            margin: 20px auto;
+            max-width: 400px;
+        }
 
-    #buttonContainer {
-        text-align: center;
-        display: none; /* Initially hide the button */
-    }
+        .container {
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #66268b;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+            animation: fadeIn 1s ease;
+        }
 
-    #ticTacToeContainer, #guessingGameContainer, #cookieClickerContainer {
-        background-color: #66268b; 
-        padding: 20px;
-        margin-top: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    }
+        input[type="text"] {
+            width: calc(100% - 20px);
+            padding: 8px;
+            margin-bottom: 10px;
+            display: block;
+            margin: 0 auto;
+            animation: slideIn 0.5s ease;
+        }
 
-    #startTimerButton {
-        position: sticky;
-        top: 20px;
-        z-index: 999; 
-    }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            animation: slideIn 0.5s ease;
+        }
 
-    #cookieButton {
-        background-image: url('download.png');
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 100px; 
-        height: 100px; 
-    }
+        li {
+            margin-bottom: 5px;
+            animation: slideIn 0.5s ease;
+        }
 
-    .container {
-        max-width: 400px;
-        margin: 0 auto;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-    }
+        .completed {
+            text-decoration: line-through;
+            color: #ccc;
+        }
 
-    input[type="text"] {
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-    }
+        .task-buttons {
+            display: inline-block;
+            margin-left: 10px;
+        }
 
-    button {
-        padding: 8px 16px;
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-    }
+        .task-buttons button {
+            margin-right: 5px;
+        }
 
-    button:hover {
-        background-color: #0056b3;
-    }
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
-    ul {
-        list-style-type: none;
-        padding: 0;
-    }
-
-    li {
-        margin-bottom: 5px;
-    }
-  </style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 <body>
-  <label for="timeInput">Set the time (in minutes):</label>
-  <input type="number" id="timeInput" min="1" step="1" value="5"> 
-  <button id="startButton">Start Timer</button>
-  <p>You have been online for:</p>
-  <p id="display">00:00:00</p>
-
-  <div id="buttonContainer">
-    <a href="Breaktime.html">
-      <button>Your work time is over! Click here to take your break and play some games!.</button>
-    </a>
-  </div>
-  <div class="container">
     <h1>Task List</h1>
     <input type="text" id="taskInput" placeholder="Add new task...">
     <button id="addTaskBtn">Add Task</button>
     <ul id="taskList"></ul>
-  </div>
 
-  <script src="Worktime.js"></script>
+    <label for="timeInput">Set the time (in minutes):</label>
+    <input type="number" id="timeInput" min="1" step="1" value="5"> 
+    <button id="startButton">Start Timer</button>
+    <p>Your have been online for:</p>
+    <p id="display">00:00:00</p>
+
+    <div id="buttonContainer" style="display: none;">
+        <a href="Breaktime.html">
+            <button>Your work time is over! Click here to take your break and play some games!.</button>
+        </a>
+    </div>
+
+    <script src="Worktime.js"></script>
 </body>
 </html>
